deployment/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
    - host: dev-atcoder-search.fjnkt98.com
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - pathType: Prefix
            path: /solr
            backend:
              service:
                name: solr
                port:
                  number: 8983
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 3000
